# XAI-Project

./: .gitignore  EDA notebook ME.ipynb  EDA notebook MP.ipynb  LIME_ANCHORS_COMPARISION.ipynb  Missing value estimation.ipynb  README.md  SHAP.ipynb  XAI_group_project_DT.ipynb  pyproject.toml
model/: classifier.pkl  training_data.csv
