[tool.poetry]
name = "xai-project"
version = "0.1.0"
description = "See README.md"
authors = ["XCredit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.2.0"
scipy = "^1.12.0"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
